--- a/src/views/tasks/new.ejs
+++ b/src/views/tasks/new.ejs
@@ -1,11 +1,18 @@
 <div class="container">
   <h2>Create Task</h2>
+  <% if(typeof errors !== 'undefined' ) { %>
+    <ul class="form-error" data-test="error-list">
+      <% errors.forEach(error=> { %>
+      <li data-test="error-item"><%= error.msg %></li>
+      <% }) %>
+    </ul>
+    <% } %>
   <form action="/tasks" method="post" class="form">
     <div class="form-group">
       <label for="title">Title</label>
       <input
         type="text"
-        value=""
+        value="<%= task.title %>"
         name="title"
         id="title"
         data-test="input-title"
@@ -19,13 +26,13 @@
         name="description"
         id="description"
         data-test="input-description"
-      ></textarea>
+      ><%= task.description %></textarea>
     </div>
     <div class="form-group">
       <label for="dueDate">Due Date</label>
       <input
         type="text"
-        value=""
+        value="<%= task.dueDate %>"
         name="dueDate"
         id="dueDate"
         data-test="input-due-date"
